RESOLVED FIXED 251001
REGRESSION(258949@main): [GTK] Cannot build WebKitGTK with LibWebRTC
https://bugs.webkit.org/show_bug.cgi?id=251001
Summary REGRESSION(258949@main): [GTK] Cannot build WebKitGTK with LibWebRTC
Diego Pino
Reported 2023-01-23 02:46:01 PST
There is a build error when building LibWebRTC (-DUSE_GSTREAMER_WEBRTC=FALSE). The header LibWebRTCVPXVideoDecoder.h is included which at the same time also includes WebKitDecoder.h which includes Availability.h. The latter header is Mac specific.
Attachments
Diego Pino
Comment 1 2023-01-23 02:50:45 PST
EWS
Comment 2 2023-01-23 10:39:45 PST
Committed 259221@main (676291717bcd): <https://commits.webkit.org/259221@main> Reviewed commits have been landed. Closing PR #8967 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-01-23 10:40:19 PST
Olivier Blin
Comment 4 2023-01-24 01:45:03 PST
*** Bug 251019 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.