[GLIB] Fix build with LibWebRTC after 258949@main https://bugs.webkit.org/show_bug.cgi?id=251001

Reviewed by Philippe Normand.

* Source/WebCore/platform/VideoDecoder.cpp:
(WebCore::VideoDecoder::createLocalDecoder):
* Source/WebCore/platform/VideoEncoder.cpp:
(WebCore::VideoEncoder::createLocalEncoder):
* Source/WebCore/platform/libwebrtc/LibWebRTCVPXVideoDecoder.cpp:
* Source/WebCore/platform/libwebrtc/LibWebRTCVPXVideoEncoder.cpp:

Canonical link: https://commits.webkit.org/259221@main